# unit-testing-internals

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
mylib/: CMakeLists.txt
mylib/include/: mylib.h
mylib/src/: mylib.c  mylib_private.h
mylib/tests/: CMakeLists.txt  unit_tests.c
tests/: CMakeLists.txt  integration_tests.c
